--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         />
 
         <link rel="stylesheet" href="css/reveal.css" />
+        <link rel="stylesheet" href="css/fedya.css" />
+        <link rel="stylesheet" href="css/computer.css" />
         <link rel="stylesheet" href="css/theme/white.css" id="theme" />
 
         <link rel="stylesheet" href="css/hljs/vs.css" id="highlight-theme" />
@@ -153,7 +155,7 @@
                 line-height: 70px;
                 text-align: right;
             }
-            .left:after {
+            div.baloon.left:after {
                 content: '';
                 position: relative;
                 top:90px;
@@ -163,7 +165,7 @@
                 border-right: 0px solid transparent;
                 border-top: 30px solid #FFF;
             }
-            .rigth:before {
+            div.baloon.rigth:before {
                 content: '';
                 position: relative;
                 top:90px;
@@ -225,6 +227,77 @@
                 </section>
                 <section>
                     <h2>Введение</h2>
+                    <div class="office fragment">
+                        <div class="window"></div>
+                        <div class="computer">
+                            <div class="screen">
+                                <div class="front square"></div>
+                                <div class="back square"></div>
+                                <div class="top square"></div>
+                                <div class="left square">
+                                    <div class="progressbar"></div>
+                                </div>
+                                <div class="left1 square"></div>
+                                <div class="back1 square"></div>
+                                <div class="bottom1 square"></div>
+                            </div>
+                            <div class="screenbottom">
+                                <div class="front2 square"></div>
+                                <div class="top2 square"></div>
+                                <div class="left2 square"></div>
+                            </div>
+
+                            <div class="keyboard">
+                                <div class="front4 square"></div>
+                                <div class="top4 square"></div>
+                                <div class="left4 square"></div>
+                                <div class="bottom4 square"></div>
+                            </div>
+                            <div class="keyboardkeys">
+                                <div class="front5 square"></div>
+                                <div class="top5 square"></div>
+                                <div class="left5 square"></div>
+                                <div class="bottom5 square"></div>
+                            </div>
+                            <div class="numpad">
+                                <div class="front6 square"></div>
+                                <div class="top6 square"></div>
+                                <div class="left6 square"></div>
+                                <div class="bottom6 square"></div>
+                            </div>
+                            <div class="trackpad"></div>
+                        </div>
+                    </div>
+                    <div class="man-wrapper">
+                        <div class="body"></div>
+                        <div id="left" class="hand"></div>
+                        <div id="right" class="hand"></div>
+                        <div class="head">
+                            <div class="ear" id="left"></div>
+                            <div class="ear" id="right"></div>
+                            <div class="hair-main">
+                                <div class="sideburn" id="left"></div>
+                                <div class="sideburn" id="right"></div>
+                                <div class="hair-top"></div>
+                            </div>
+                            <div class="face">
+                                <div class="nose"></div>
+                                <div class="eye-shadow" id="left">
+                                    <div class="eyebrow"></div>
+                                    <div class="eye"></div>
+                                </div>
+                                <div class="eye-shadow" id="right">
+                                    <div class="eyebrow"></div>
+                                    <div class="eye"></div>
+                                </div>
+                                <div class="mouth"></div>
+                                <div class="chin"></div>
+                            </div>
+                        </div>
+                        <span class="music-note" id="one">Java</span>
+                        <span class="music-note" id="two">Rocks!</span>
+                    </div>
+
                     <aside class="notes"></aside>
                 </section>
                 <section>
@@ -279,6 +352,11 @@
                     </div>
                 </section>
                 <section>
+                    <h2>Helicopter view</h2>
+                    <img src="img/helicopter_view.svg" alt="Helicopter view">
+                    <aside class="notes"></aside>
+                </section>
+<section>
                     <h2>Как её решает DSL?</h2>
                     <ul>
                         <li></li>
